--- a/webplugin/css/app/style.css
+++ b/webplugin/css/app/style.css
@@ -4885,8 +4885,11 @@ div#mck-rated:before {
 .layout-modern #mck-sidebox-content .mck-running-on {
   display: none !important;
 }
-.layout-modern #mck-sidebox-content.active-tab-conversations.active-subsection-conversation-individual .mck-running-on, .layout-modern #mck-sidebox-content.is-tab-conversations.is-subsection-conversation-individual .mck-running-on {
+.layout-modern #mck-sidebox-content.active-tab-conversations.active-subsection-conversation-individual .mck-running-on.vis, .layout-modern #mck-sidebox-content.is-tab-conversations.is-subsection-conversation-individual .mck-running-on.vis {
   display: block !important;
+}
+.layout-modern #mck-sidebox-content.active-tab-conversations.active-subsection-conversation-individual .mck-running-on.n-vis, .layout-modern #mck-sidebox-content.is-tab-conversations.is-subsection-conversation-individual .mck-running-on.n-vis {
+  display: none !important;
 }
 .layout-modern #km-faq {
   display: none !important;
